--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/QuanLyThanhToan.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/QuanLyThanhToan.cshtml
@@ -71,8 +71,7 @@
                         <span class="col-md-2 item" style="text-align: center;">@item.NgayThucHien</span>
                         <span class="col-md-2 item" style="text-align: center;">@item.TrangThai</span>
                         <span class="col-md-2 item" style="text-align: center;">
-                            <a href="/QuanTriVien/Edit?MaThanhToan=@item.MaThanhToan" class="btn btn-warning btn-sm">Sửa</a>
-                            <a href="/QuanTriVien/Details?MaThanhToan=@item.MaThanhToan" class="btn btn-info btn-sm">Chi tiết</a>
+                            <a href="/QuanTriVien/ChiTietThanhToan?maThanhToan=@item.MaThanhToan" class="btn btn-info btn-sm">Chi tiết</a>
                         </span>
                     </div>
                 }
