--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/TaoDangKy.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/TaoDangKy.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Shared/_LayoutQuanTriVien.cshtml";
 }
 
-<div class="container mt-5">
+<div style="padding: 8px 20px;" class=" mt-5">
     <h2 class="mb-4 fw-bold h2 text-center">Tạo Đăng Ký</h2>
 
     <form id="dangKyForm" method="post">
@@ -113,9 +113,9 @@
     </div>
 
     <!-- Nút Thanh Toán và Hủy -->
-    <div class="my-3">
-        <a href="/QuanTriVien/XacNhanThanhToan" id="btnThanhToan" class="btn mx-3 my-2 btn-success">Thanh Toán</a>
-        <a href="/QuanTriVien/HuyThanhToan" id="btnHuyThanhToan" class="btn mx-3 my-2 btn-danger">Huỷ thanh toán</a>
+    <div class="my-2">
+        <a href="/QuanTriVien/XacNhanThanhToan" id="btnThanhToan" class="btn my-2 btn-success">Thanh Toán</a>
+        <a href="/QuanTriVien/HuyThanhToan" id="btnHuyThanhToan" class="btn my-2 btn-danger">Huỷ thanh toán</a>
     </div>
 </div>
 
