--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/XacNhanThanhToan.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/XacNhanThanhToan.cshtml
@@ -4,51 +4,51 @@
     ViewBag.Title = "XacNhanThanhToan";
     Layout = "~/Views/Shared/_LayoutQuanTriVien.cshtml";
 }
+<div style="padding: 8px 20px;">
+    <h2 style="margin-top: 46px;" class="mb-2 fw-bold h2 text-center">Xác Nhận Thanh Toán</h2>
+    <form action="/QuanTriVien/TienHanhThanhToan" method="post" enctype="multipart/form-data">
+        <div class="mt-5">
+            <fieldset class="border p-4">
+                <legend class="w-auto mb-2" style="font-weight: 500;">Thông Tin Thanh Toán</legend>
 
-<h2 class="text-center">Xác Nhận Thanh Toán</h2>
-
-
-<form action="/QuanTriVien/TienHanhThanhToan" method="post" enctype="multipart/form-data">
-    <div class="container mt-5">
-        <fieldset class="border p-4">
-            <legend class="w-auto px-2">Thông Tin Thanh Toán</legend>
-
-            <!-- Mã Học Viên -->
-            <div class="mb-3">
-                <label for="MaHocVien" class="form-label">Mã Học Viên</label>
-                <input type="text" class="form-control" id="MaHocVien" name="MaHocVien" value="@Model.MaHocVien" />
-            </div>
-
-            <!-- Tổng Tiền -->
-            <div class="mb-3">
-                <label for="TongTien" class="form-label">Tổng Tiền</label>
-                <input type="text" class="form-control" readonly id="TongTien" name="TongTien" value="@Model.TongTien" />
-            </div>
-
-            <!-- Hình Thức Thanh Toán -->
-            <div class="mb-3">
-                <label for="HinhThuc" class="form-label">Hình Thức Thanh Toán</label>
-                <input type="text" class="form-control" id="HinhThuc" name="HinhThuc" value="@Model.HinhThuc" />
-            </div>
-
-            <!-- Ảnh Hóa Đơn -->
-            <div class="mb-3">
-                <label for="AnhHoaDon" class="form-label">Ảnh Hóa Đơn</label>
-                <input type="file" class="form-control" id="AnhHoaDon" name="AnhHoaDon" />
-
-                <div id="imagePreview" class="mt-3">
-                    <img id="preview" src="#" alt="Image Preview" style="max-width: 100%; display: none;" />
+                <!-- Mã Học Viên -->
+                <div class="mb-3">
+                    <label for="MaHocVien" class="form-label">Mã Học Viên</label>
+                    <input type="text" class="form-control" id="MaHocVien" name="MaHocVien" value="@Model.MaHocVien" />
                 </div>
-            </div>
 
-            <!-- Nút Submit -->
-            <div class="text-center">
-                <a href="/QuanTriVien/HuyThanhToan" class="btn btn-danger">Huỷ</a>
-                <button type="submit" class="btn btn-primary">Xác nhận</button>
-            </div>
-        </fieldset>
-    </div>
-</form>    
+                <!-- Tổng Tiền -->
+                <div class="mb-3">
+                    <label for="TongTien" class="form-label">Tổng Tiền</label>
+                    <input type="text" class="form-control" readonly id="TongTien" name="TongTien" value="@Model.TongTien" />
+                </div>
+
+                <!-- Hình Thức Thanh Toán -->
+                <div class="mb-3">
+                    <label for="HinhThuc" class="form-label">Hình Thức Thanh Toán</label>
+                    <input type="text" class="form-control" id="HinhThuc" name="HinhThuc" value="@Model.HinhThuc" />
+                </div>
+
+                <!-- Ảnh Hóa Đơn -->
+                <div class="mb-3">
+                    <label for="AnhHoaDon" class="form-label">Ảnh Hóa Đơn</label>
+                    <input type="file" class="form-control" id="AnhHoaDon" name="AnhHoaDon" />
+
+                    <div id="imagePreview" class="mt-3">
+                        <img id="preview" src="#" alt="Image Preview" style="max-width: 100%; display: none;" />
+                    </div>
+                </div>
+
+                <!-- Nút Submit -->
+                <div class="text-center">
+                    <a href="/QuanTriVien/HuyThanhToan" class="btn btn-danger">Huỷ</a>
+                    <button type="submit" class="btn btn-primary">Xác nhận</button>
+                </div>
+            </fieldset>
+        </div>
+    </form>    
+</div>
+
 
 <script>
     // Hàm để preview ảnh
