--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/QuanLyThanhToan.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/QuanLyThanhToan.cshtml
@@ -71,7 +71,11 @@
                         <span class="col-md-2 item" style="text-align: center;">@item.NgayThucHien</span>
                         <span class="col-md-2 item" style="text-align: center;">@item.TrangThai</span>
                         <span class="col-md-2 item" style="text-align: center;">
-                            <a href="/QuanTriVien/ChiTietThanhToan?maThanhToan=@item.MaThanhToan" class="btn btn-info btn-sm">Chi tiết</a>
+                            <a href="/QuanTriVien/ChiTietThanhToan?maThanhToan=@item.MaThanhToan" style="width: 30px; height: 30px; background-color: #00bbf9; border-radius: 5px; display: flex; justify-content: center; align-items: center; ">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" style="height: 20px; width: 20px;">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
+                                </svg>
+                            </a>
                         </span>
                     </div>
                 }
