--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/Index.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/Index.cshtml
@@ -125,7 +125,7 @@
             </div>
         </div>
 
-        <div style="display: flex; justify-content: space-between; column-gap: 16px;" class="py-3">
+        @*<div style="display: flex; justify-content: space-between; column-gap: 16px;" class="py-3">
             <div style="flex: 1">
                 @Html.Action("GetLopHocTrungTam")
             </div>
@@ -146,7 +146,7 @@
             <div style="flex: 1">
                 @Html.Action("GetThongKeGioiTinh")
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
 
