--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DiemDanh.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DiemDanh.cshtml
@@ -44,10 +44,11 @@
                                 <span class="diem-danh-text">
                                     @(hocVien.ds[j].TrangThai == "Có mặt" ? "x" : hocVien.ds[j].TrangThai == "Vắng" ? "-" : "")
                                 </span>
-                                <input type="text" id="TrangThai_@i@j" name="dsDiemDanh[@i].ds[@j].TrangThai"
-                                       value="@hocVien.ds[j].TrangThai"
-                                       class="diem-danh-input d-none text-center w-100"
-                                       data-hocvien-index="@i" data-diemdanh-index="@j" />
+                                <select class="diem-danh-input d-none text-center w-100"
+                                        data-hocvien-index="@i" data-diemdanh-index="@j" name="dsDiemDanh[@i].ds[@j].TrangThai">
+                                    <option value="Có mặt" @(hocVien.ds[j].TrangThai == "Có mặt" ? "selected" : "")>Có mặt</option>
+                                    <option value="Vắng" @(hocVien.ds[j].TrangThai == "Vắng" ? "selected" : "")>Vắng</option>
+                                </select>
                             </td>
                         }
                     </tr>
