--- a/QL_TrungTamAnhNgu/Views/HocVien/ChiTietTaiLieu.cshtml
+++ b/QL_TrungTamAnhNgu/Views/HocVien/ChiTietTaiLieu.cshtml
@@ -93,7 +93,7 @@
                 <div class="col-sm-8">
                     @if (!string.IsNullOrEmpty(Model.FileTaiLieu))
                     {
-                        <a href="~/Uploads/@Model.FileTaiLieu" class="btn btn-primary btn-sm" target="_blank">
+                        <a href="~/Content/HinhAnh/TaiLieu/@Model.FileTaiLieu" class="btn btn-primary btn-sm" target="_blank">
                             <i class="fas fa-download me-2"></i>Tải tài liệu
                         </a>
                     }
