--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachKhoaHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachKhoaHoc.cshtml
@@ -37,16 +37,13 @@
             <i class="fa-solid fa-angle-right"></i>
             <span style="color: #343a40">Danh sách khóa học</span>
         </div>
-        <div class="mt-3">
-            <form method="get" action="/QuanTriVien/TimKiemKhoaHoc" class="input-group" style="width: 75%; position: relative;">
+        <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px;">Danh sách khóa học</h1>
+        <form method="get" action="/QuanTriVien/TimKiemKhoaHoc" class="mt-3 input-group" style="width: 75%; position: relative;">
                 <input type="search" name="search" style="outline: none; width: 80%; padding: 8px; padding-left: 12px; border: 2px solid #0d6efd; border-top-left-radius: 5px; border-bottom-left-radius: 5px" placeholder="Tìm kiếm theo tên khóa học...">
                 <button type="submit" class="btn btn-outline-secondary" style="padding: 8px 12px; background-color: #0d6efd; border-radius: 5px; border: 2px solid #0d6efd; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" type="button">
                     <i style="color: white;" class="fa-solid fa-magnifying-glass"></i>
                 </button>
-            </form>
-        </div>
-
-        <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px;">Danh sách khóa học</h1>
+        </form>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
             <div class="row g-4">
                 @foreach (var item in Model.DsKhoaHoc)
@@ -55,10 +52,20 @@
                         <img src="~/Content/HinhAnh/KhoaHoc/@item.AnhBia" alt="@item.TenKhoaHoc" style="display: block ; width: 100%; height: 150px; border-top-left-radius: 5px; border-top-right-radius: 5px; " />
                         <div style="padding: 8px 12px 0; height: 170px; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; border: 1px solid #dadada; background-color: #fff;">
                             <span style="font-size: 16px; font-weight: 500;">@item.TenKhoaHoc</span>
-                            @*<span style="font-size: 14px; display: block; margin-top: 15px; color: #7f7f7f; ">Giảng viên: @item.GiangVien.HoTen</span>*@
                             <span style="font-size: 14px; display: block; margin: 20px 0;">
                                 Trạng thái:
-                                <span style="padding: 4px 12px; background-color: #248823; color: #fff; border-radius: 20px; font-size: 12px;">@item.TrangThai</span>
+                                    @if (item.TrangThai == "Đang hoạt động")
+                                    {
+                                        <span style="padding: 4px 12px; background-color: #248823; color: #fff; border-radius: 20px; font-size: 12px;">
+                                        @item.TrangThai
+                                        </span>
+                                    }
+                                    else
+                                    {
+                                         <span style="padding: 4px 12px; background-color: red; color: #fff; border-radius: 20px; font-size: 12px;">
+                                        @item.TrangThai
+                                        </span>
+                                    }
                                 <span style="font-size: 15px; display: block;  margin-top: 15px; font-weight: 500; color: #ff0000; ">
                                     Giá: @String.Format("{0:N0}", item.HocPhi) đ
                                 </span>
